# flexdub

./: .gitignore  CHANGELOG.md  CLEANUP_PLAN.md  README.md  agent_manual.md  agent_manual_v2.md  pyproject.toml  requirements.txt
.agent/: config.md  loader.py
.agent/skills/: index.yaml
.agent/skills/auto_dub/: SKILL.md
.agent/skills/diagnosis/: SKILL.md
.agent/skills/semantic_refine/: SKILL.md
.agent/skills/video_download/: SKILL.md
.agent/workflows/: dubbing.md
.kiro/specs/agent-orchestration-system/: fix-tracker.md  parameter-standards.md  requirements.md
.kiro/specs/doubao-tts-backend/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
docs/: refactor-roadmap-v2-to-universal.md
flexdub/: __main__.py
flexdub/backends/: __init__.py
flexdub/cli/: __main__.py
flexdub/core/: adapters.py  analyzer.py  audio.py  gs_align.py  io.py  qa.py  rebalance.py  semantic_refine.py  subtitle.py
flexdub/mcp/: __init__.py  server.py
flexdub/pipelines/: dubbing.py  elastic_video.py  workflow.py
pyvideotrans/: __main__.py
pyvideotrans/cli/: __main__.py
pyvideotrans/core/: adapters.py  io.py  lang.py  qa.py  subtitle.py
pyvideotrans/pipelines/: dubbing.py  elastic_video.py
scripts/: align_gs_to_srt.py  clean_youtube_srt.py  dual_srt_llm_clean.py  test_mcp_tools.py  validate_docs.sh
tests/: test_audio_processing.py  test_auto_robust_ts.py  test_cli_defaults.py  test_performance.py  test_srt_rebalancing.py  test_srt_validation.py  test_strict_edge_no_fallback.py  test_text_immutable.py
(+41 files in other folders)
