[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flexdub"
version = "2.0.0"
description = "Elastic dubbing pipeline for SRT+Video"
requires-python = ">=3.9"
dependencies = [
  "srt",
  "numpy",
  "soundfile",
  "tqdm",
]

[project.optional-dependencies]
tts = ["edge-tts"]
stretch = ["pyrubberband"]

[project.scripts]
flexdub = "flexdub.cli.__main__:main"